Fixed activity styles when it has scrollbar

--- a/view/adminhtml/web/css/layout/_activity.less
+++ b/view/adminhtml/web/css/layout/_activity.less
@@ -110,11 +110,14 @@
             background: #fff;
             box-shadow: 0 0 20px rgba(0,0,0,0.1);
             border-radius: 5px;
-            max-height: 500px;
             min-width: 400px;
-            overflow: auto;
             padding: 17px 15px 20px 10px;
             margin: 0;
+
+            .data-grid-wrapper {
+                max-height: 350px;
+                overflow: auto;
+            }
 
             thead {
                 display: none;
